--- a/src/app/profiles/profiles.component.css
+++ b/src/app/profiles/profiles.component.css
@@ -46,3 +46,13 @@
         margin-left: 90px;
     }
 }
+
+
+.watermark {
+    color: white;
+    color: rgba(253, 252, 252, 0.295);
+    transform: rotate(-90deg);
+    white-space: nowrap;
+    font-family: Arial, sans-serif;
+    position: absolute;
+}
