--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -68,9 +68,9 @@
                 <img class="card-img-top img-fluid" src={{profile.image}} onError="this.onerror=null;this.src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSfmJO1vZOid-nPBHG4aMhenFmy5zW4qPg_-g&usqp=CAU';" alt="Card image">
             </div>
             <div class="card-body p-1">
+                <h5>Id: <code>{{ profile.id }}</code></h5>
                 <h5 class="text-center">{{ profile.name | titlecase }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
                 <h6 class="text-center">DOB:  <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
-                <h6 class="text-center">Star: <small *ngIf="profile.star; else elseNil">{{ profile.star | titlecase }}</small></h6>
                 <ng-template #elseNil><small>Nil</small></ng-template>
             </div>
             <div class="card-footer p-2 pr-3 text-right"><a [routerLink]="['/profiledetail', profile.id]">View profile</a></div>
@@ -83,9 +83,9 @@
         <div *ngFor="let profile of filteredProfiles; index as i" class="card mt-5 mb-5 text-center">
             <img class="card-img-top img-fluid" src={{profile.image}} onError="this.onerror=null;this.src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSo7WfE6wFfdpeFph92LdEFJFnula0ecIObiQ&usqp=CAU';" alt="Card image">
             <div class="card-body p-1">
+                <h5>Id: <code>{{ profile.id }}</code></h5>
                 <h5 class="text-center">{{ profile.name | titlecase }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
                 <h6 class="text-center">DOB: <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
-                <h6 class="text-center">Star: <small *ngIf="profile.star; else elseNil">{{ profile.star | titlecase }}</small></h6>
                 <ng-template #elseNil><small>Nil</small></ng-template>
             </div>
             <div class="card-footer p-2 pr-3 text-right"><a [routerLink]="['/profiledetail', profile.id]">View profile</a></div>
