Enabled view contact and modified views

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,13 +16,13 @@
                     <br>
                     <a href="tel:9344737090" class="text-white">Call now</a>
                     <br>
-                    <a href="https://api.whatsapp.com/send?phone=919944468585">WhatsApp us</a>
+                    <a href="https://api.whatsapp.com/send?phone=919994411772">WhatsApp us</a>
                 </p>
             </section>
         </div>
     </div>
     <div class="container text-center text-white mt-2">
-        <address >6/14, South Saliya Street, Koranad, Mayiladuthurai - 609001</address>
+        <address>1, Bumi nagar, Pechavadi, Mayiladuthurai - 609001</address>
     </div>
     <div class="container text-center text-white">
         &copy; developed by Amirtha
