--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -81,6 +81,6 @@ nav h5 {
     background-image: linear-gradient(to right, rgb(228, 2, 2), rgb(252, 113, 103), rgb(228, 2, 2));
 }
 
-.dropdown-toggle {
+.dropdown-toggle, .nav-link, .dropdown-item {
     cursor: pointer;
 }
