--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -165,9 +165,6 @@
                             <div class="form-check form-check-inline offset-md-2">
                                 <input class="form-check-input" value="female" type="radio"  formControlName="gender" [ngClass]="{ 'is-invalid': submitted && f.gender.errors }" required>
                                 <label class="form-check-label">Female</label>
-                                <!-- <div *ngIf="submitted && f.gender.errors" class="invalid-feedback">
-                                   <div *ngIf="f.gender.errors.required">&nbsp;&nbsp;&nbsp;&nbsp; Gender is required</div>
-                                </div> -->
                             </div>
                         </div>
 
@@ -801,7 +798,7 @@
 
     <div class="container text-center mb-5">
         <div class="text-center">
-            <button class="btn btn-lg submit-btn col-4" type="submit">Submit</button>
+            <button class="btn btn-lg submit-btn col-4" type="submit" routerLink="/profiles">Submit</button>
             <button class="btn btn-lg cancel-btn col-4 offset-md-2" type="reset">Cancel</button>
         </div>
     </div>
