Modified register, update conditions

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -798,7 +798,7 @@
 
     <div class="container text-center mb-5">
         <div class="text-center">
-            <button class="btn btn-lg submit-btn col-4" type="submit" routerLink="/profiles">Submit</button>
+            <button class="btn btn-lg submit-btn col-4" type="submit">Submit</button>
             <button class="btn btn-lg cancel-btn col-4 offset-md-2" type="reset">Cancel</button>
         </div>
     </div>
