--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -84,3 +84,9 @@ nav h5 {
 .dropdown-toggle, .nav-link, .dropdown-item {
     cursor: pointer;
 }
+
+@media screen and (max-width: 700px) {
+    #cancel-login {
+       display: none;
+    }
+}
