--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,25 +31,25 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         
         <ul class="navbar-nav ml-auto">    
-            <li class="nav-item"><a class="nav-link" routerLink='/home'>Home</a></li>
-            <li class="nav-item"><a class="nav-link" routerLink='/about'>About us</a></li>
-            <li class="nav-item"><a class="nav-link" routerLink='/profiles'>Profiles</a></li>
-            <li class="nav-item"><a class="nav-link" routerLink='/payments'>Payments</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink='/home'>Home</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink='/about'>About us</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink='/profiles'>Profiles</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink='/payments'>Payments</a></li>
             <li class="nav-item dropdown" *ngIf="isLogged">
                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Profile</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item text-dark" (click)="viewMyProfile()" routerLink='/profiledetail/{{id}}'>View Profile</a>
-                    <a class="dropdown-item text-dark" routerLink='/update/{{id}}'>Edit Profile</a>
-                    <a class="dropdown-item text-dark" (click)="onLogout()" routerLink='/home'>Log Out</a>
+                    <a class="dropdown-item text-dark" (click)="viewMyProfile()" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink='/profiledetail/{{id}}'>View Profile</a>
+                    <a class="dropdown-item text-dark" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink='/update/{{id}}'>Edit Profile</a>
+                    <a class="dropdown-item text-dark" data-toggle="collapse" data-target=".navbar-collapse.show" (click)="onLogout()" routerLink='/home'>Log Out</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item dropdown-toggle text-dark pt-0 pb-0" id="settings" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Settings</a>
                     <div class="dropdown-menu" aria-labelledby="settings">
-                        <a class="dropdown-item text-dark">My Account</a>
+                        <a class="dropdown-item text-dark" data-toggle="collapse" data-target=".navbar-collapse.show">My Account</a>
                         <a class="dropdown-item text-dark" data-target="#delete-modal" data-toggle="modal">Delete Profile</a>
                     </div>
                 </div>
             </li>
-            <li class="nav-item" *ngIf="!isLogged"><a class="nav-link" routerLink='/register'>Register</a></li>
+            <li class="nav-item" *ngIf="!isLogged"><a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink='/register'>Register</a></li>
             <li class="nav-item" *ngIf="!isLogged"><a class="nav-link" data-target="#login-modal" data-toggle="modal">Login</a></li>
         </ul>
  
@@ -110,7 +110,7 @@
                         </div>
                         <div class="modal-footer">
                             <a class="nav-link mr-auto" data-target="#reset-modal" data-toggle="modal" data-dismiss="modal">Forgot password?</a>
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-secondary" id="cancel-login" data-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary" (click)='onSubmit()' routerLink="/home" data-dismiss="modal">Submit</button>
                         </div>
                     </div>
